updated completed courses and layout issues with fabulous fifty area

--- a/assets/css/4-pages/_home.scss
+++ b/assets/css/4-pages/_home.scss
@@ -197,7 +197,7 @@ section {
   //.home-sections .flex {
     //display: block; }
   .home-sections .home-course-inner {
-    display: none;
+    //display: none;
   }
   .col-1 {
     width: 100%; }
